--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
-DATABASE_URL="postgresql://neondb_owner:npg_CHqsrxRI80LJ@ep-blue-haze-a9qjjasx-pooler.gwc.azure.neon.tech/pizzeria?sslmode=require"
+DATABASE_URL="postgresql://escuela_owner:npg_hxpYJBg4Uo0u@ep-lingering-bar-a9a4i44h-pooler.gwc.azure.neon.tech/pizzerria?sslmode=require"
 
 
 AUTH_SECRET="5mgmKxo1UGAgIVuIeCEa7MG96hIkvUe0T84GnyEyu40="
 
 
-AUTH_GOOGLE_ID = "31702436773-r5br8piidkg5n0tk8buhvr21qdva9eg0.apps.googleusercontent.com"
-AUTH_GOOGLE_SECRET = "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"
+AUTH_GOOGLE_ID = "721253134942-2co1guo26j7k3ocg5dh6dbrlm3vdtt0c.apps.googleusercontent.com"
+AUTH_GOOGLE_SECRET = "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"
 
 
 
-AUTH_GITHUB_ID="Ov23liN3UiTqS2pO1gxF"
-AUTH_GITHUB_SECRET= "c18d8224306911a2be62414125712cbbe4d08355"
+AUTH_GITHUB_ID="Iv23liPOg6YjDZi6HGaQ"
+AUTH_GITHUB_SECRET= "95482ee4a530eb2679c43221db7ea08fa169339e"
 
 #AUTENTICACION DE DISCORD
-AUTH_DISCORD_ID = "1345370956109058059"
-AUTH_DISCORD_SECRET = "BOKC6nKCw_FCFeaIYr0kZY1Ly36jPc1O"
+AUTH_DISCORD_ID = "1347600151547482164"
+AUTH_DISCORD_SECRET = "BIlJ9kpRSgy10tI_PP6C3dO-QOqjO6SE"
