--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://escuela_owner:npg_hxpYJBg4Uo0u@ep-lingering-bar-a9a4i44h-pooler.gwc.azure.neon.tech/pizzerria?sslmode=require"
+DATABASE_URL="postgresql://pizzerria_owner:npg_u2rAlUz7peBI@ep-steep-glade-a83zx6vw-pooler.eastus2.azure.neon.tech/pizzerria?sslmode=require"
 
 
 AUTH_SECRET="5mgmKxo1UGAgIVuIeCEa7MG96hIkvUe0T84GnyEyu40="
